[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/textures/test_table.png" type="Texture" id=1]
[ext_resource path="res://resources/textures/title.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/tutorial.png" type="Texture" id=3]
[ext_resource path="res://resources/textures/play.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/options.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/credits.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/die.png" type="Texture" id=7]
[ext_resource path="res://scenes/title_screen/title_screen.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 393, 125 )
scale = Vector2( 2.08491, 2.08491 )
texture = ExtResource( 2 )

[node name="play" type="Node2D" parent="."]
position = Vector2( 160, 441 )

[node name="texturebutton" type="TextureButton" parent="play"]
margin_top = -72.0
margin_right = 195.0
margin_bottom = 71.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="tutorial" type="Node2D" parent="."]
position = Vector2( 160, 570 )

[node name="texturebutton" type="TextureButton" parent="tutorial"]
margin_top = -50.0
margin_right = 351.0
margin_bottom = 49.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="options" type="Node2D" parent="."]
position = Vector2( 160, 720 )

[node name="texturebutton" type="TextureButton" parent="options"]
margin_top = -51.0
margin_right = 334.0
margin_bottom = 49.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="credits" type="Node2D" parent="."]
position = Vector2( 160, 870 )

[node name="texturebutton" type="TextureButton" parent="credits"]
margin_top = -51.0
margin_right = 327.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="cursor" type="Sprite" parent="."]
position = Vector2( 82, 420 )
scale = Vector2( 0.919921, 0.919921 )
texture = ExtResource( 7 )
hframes = 8
region_rect = Rect2( -3.79198, -0.356596, 131.078, 131.829 )

[node name="ClackPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="play/texturebutton" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_entered" from="tutorial/texturebutton" to="." method="_on_tutorial_mouse_entered"]
[connection signal="mouse_entered" from="options/texturebutton" to="." method="_on_optioins_mouse_entered"]
[connection signal="mouse_entered" from="credits/texturebutton" to="." method="_on_credits_mouse_entered"]
